<resources>
    <string name="app_name">Lab1</string>
    <string name="enter">Enter</string>
    <string name="result">Result</string>
    <string name="clear">C</string>
    <string name="left_bracket">(</string>
    <string name="right_bracket">)</string>
    <string name="divide">/</string>
    <string name="multiply">*</string>
    <string name="subtract">-</string>
    <string name="add">+</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="zero">0</string>
    <string name="point">.</string>
    <string name="equals">=</string>
    <string name="sqrt">√</string>
    <string name="sin">sin</string>
    <string name="cos">cos</string>
    <string name="tan">tan</string>
    <string name="exp">exp</string>
    <string name="ln">ln</string>
    <string name="reverse">1/x</string>
    <string name="square">x^2</string>
    <string name="pow">x^y</string>
    <string name="abs">|x|</string>
    <string name="asin">asin</string>
    <string name="acos">acos</string>
</resources>